force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/Count_Weightage_For_Duplicate_Clicks__c.field-meta.xml
<CustomField>
    <fullName>Count_Weightage_For_Duplicate_Clicks__c</fullName>
    <formula>Campaign__r.Count_Weightage_For_Duplicate_Clicks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Weightage For Duplicate Clicks?</label>
    <type>Checkbox</type>
</CustomField>