force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/Create_Opportunity_On_Open__c.field-meta.xml
<CustomField>
    <fullName>Create_Opportunity_On_Open__c</fullName>
    <formula>Campaign__r.Create_Opportunity_On_Open__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Opportunity On Open?</label>
    <type>Checkbox</type>
</CustomField>