force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Template</label>
    <referenceTo>Email_Template__c</referenceTo>
    <relationshipLabel>Individual Email Results</relationshipLabel>
    <relationshipName>Individual_Email_Results</relationshipName>
    <type>Lookup</type>
</CustomField>