force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <label>Error Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>