force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/Errored__c.field-meta.xml
<CustomField>
    <fullName>Errored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Errored?</label>
    <type>Checkbox</type>
</CustomField>