force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/Marked_by_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Marked_by_Scheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked by Scheduling</label>
    <type>Checkbox</type>
</CustomField>