force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/Marked_For_Opportunity_Creation__c.field-meta.xml
<CustomField>
    <fullName>Marked_For_Opportunity_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked For Opportunity Creation</label>
    <type>Checkbox</type>
</CustomField>