force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Individual Email Results</relationshipLabel>
    <relationshipName>Individual_Email_Results</relationshipName>
    <type>Lookup</type>
</CustomField>